[gd_scene load_steps=5 format=3 uid="uid://dgg84yc4fwguy"]

[ext_resource type="Script" path="res://components/Farm/Farm.gd" id="1_hnx63"]

[sub_resource type="Gradient" id="Gradient_00y44"]
colors = PackedColorArray(0.619608, 0, 0, 1, 0.851107, 0.577614, 0.327753, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_u2ygy"]
gradient = SubResource("Gradient_00y44")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5cfrn"]
size = Vector2(256, 168)

[node name="Farm" type="Area2D"]
position = Vector2(973, 563)
script = ExtResource("1_hnx63")
metadata/_edit_group_ = true

[node name="FarmSprite" type="Sprite2D" parent="."]
scale = Vector2(1, 167.75)
texture = SubResource("GradientTexture1D_u2ygy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5cfrn")

[node name="UpgradeButton" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -131.0
offset_right = 128.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 2
text = "Upgrade : $ 300"

[node name="CurrentMultiplier" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="UpgradeButton" to="." method="_on_upgrade_button_pressed"]
